k8s/simplesvelte-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dpl
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: k3d-myreg.localhost:12345/simplesvelte:latest
          name: myapp
          ports:
            - containerPort: 80
