k8s/simplesvelte-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myapp
